fixed button label

--- a/note.html
+++ b/note.html
@@ -38,7 +38,7 @@
         <p>The picked color will be displayed here.</p>
         <div ng-repeat="picked in pickedes" class="color" style="{{picked.back_ground_color}}"></div>
     </div>
-    <div><button ng-click="toNote()">noteに反映</button></div>
+    <div><button ng-click="toNote()">編集エリアに追加</button></div>
     <canvas id="canvas"></canvas>
     </div>
   </main>
