--- a/note.html
+++ b/note.html
@@ -21,13 +21,10 @@
     <div class="button_div">
       <button ng-click="add()"><i class="fa fa-plus" aria-hidden="true"></i>色を追加</button>
     </div>
-    <div class="button_div">
-      <button id="show_picker" onclick="picker_show()"><i class="fa fa-picture-o" aria-hidden="true"></i></i>画像から色を選択</button>
-    </div>
   </div>
 
     <!-- picker -->
-    <div ng-controller="pickerController" id="picker_div" style="display: none;">
+    <div ng-controller="pickerController" id="picker_div">
     <h1>画像から色を選択します。</h1>
     <h2>1.画像を選択します</h2>
     <div class="file" id="file_input_div">
